--- a/template.hbs
+++ b/template.hbs
@@ -1,4 +1,5 @@
     {{!-- The following component displays Ember's default welcome message. --}}
+    <html>
     <head>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
@@ -105,6 +106,7 @@
 
         
     </div>
+    </html>
 
     {{!-- Feel free to remove this! --}}
 
